fixed a width issue with the workGrid images on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -561,8 +561,8 @@ li, p {
     }
 
     .workGrid img {
-        height: 260px;
-        width: 400px;
+        height: 250px;
+        max-width: 100%;
     }
 
     .workContentOne,
